<resources>
    <string name="app_name">Calculator</string>
    <string name="name_of_program">Calculator</string>
    <string name="number">8888888888</string>
    <string name="ac">AC</string>
    <string name="sign">+/-</string>
    <string name="percent">%</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="fife">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="ate">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="division">÷</string>
    <string name="multiplication">X</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="comma">,</string>
</resources>