<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="normal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    app:guidelineUseRtl="true"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/buttonEquals"
        style="@style/blueButton"
        android:layout_marginStart="309dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="59dp"
        android:onClick="equalsClick"
        android:text="@string/equals"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPlus"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/buttonPlus"
        style="@style/blueButton"
        android:layout_marginStart="309dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="155dp"
        android:onClick="operationClick"
        android:text="@string/plus"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMinus"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/buttonMinus"
        style="@style/blueButton"
        android:layout_marginStart="309dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="251dp"
        android:onClick="operationClick"
        android:text="@string/minus"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMultiplication"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/buttonMultiplication"
        style="@style/blueButton"
        android:layout_marginStart="309dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="347dp"
        android:onClick="operationClick"
        android:text="@string/multiplication"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDivision"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/buttonDivision"
        style="@style/blueButton"
        android:layout_marginStart="309dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="443dp"
        android:onClick="operationClick"
        android:text="@string/division"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button0"
        style="@style/whiteButton"
        android:layout_width="175dp"
        android:layout_height="80dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="213dp"
        android:layout_marginBottom="64dp"
        android:onClick="numberClick"
        android:stateListAnimator="@null"
        android:text="@string/zero"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/buttonComma"
        style="@style/whiteButton"
        android:layout_marginStart="215dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="59dp"
        android:onClick="numberClick"
        android:text="@string/comma"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button3"
        style="@style/whiteButton"
        android:layout_marginStart="215dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="155dp"
        android:onClick="numberClick"
        android:text="@string/three"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button2"
        style="@style/whiteButton"
        android:layout_marginStart="119dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="215dp"
        android:layout_marginBottom="155dp"
        android:onClick="numberClick"
        android:text="@string/two"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button1"
        style="@style/whiteButton"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="155dp"
        android:onClick="numberClick"
        android:text="@string/one"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button6"
        style="@style/whiteButton"
        android:layout_marginStart="215dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="251dp"
        android:onClick="numberClick"
        android:text="@string/six"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button9"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button5"
        style="@style/whiteButton"
        android:layout_marginStart="119dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="251dp"
        android:onClick="numberClick"
        android:text="@string/fife"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button8"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button4"
        style="@style/whiteButton"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="251dp"
        android:onClick="numberClick"
        android:text="@string/four"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button8"
        style="@style/whiteButton"
        android:layout_marginStart="119dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="347dp"
        android:onClick="numberClick"
        android:text="@string/ate"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSign"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button9"
        style="@style/whiteButton"
        android:layout_marginStart="215dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="347dp"
        android:onClick="numberClick"
        android:text="@string/nine"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonPercent"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/button7"
        style="@style/whiteButton"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="347dp"
        android:onClick="numberClick"
        android:text="@string/seven"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAC"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/buttonPercent"
        style="@style/whiteButton"
        android:layout_marginStart="216dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="445dp"
        android:onClick="percentClick"
        android:text="@string/percent"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/name_of_program"
        android:layout_width="140dp"
        android:layout_height="34dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="247dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/museo"
        android:text="@string/name_of_program"
        android:textAppearance="@style/calculator"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="548dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_rectangle"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="52dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:alpha="0.08"
        android:fontFamily="@font/digitalnumbers_regular"
        android:text="@string/number"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/buttonAC"
        style="@style/whiteButton"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="306dp"
        android:layout_marginBottom="445dp"
        android:onClick="acClick"
        android:text="@string/ac"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:id="@+id/buttonSign"
        style="@style/whiteButton"
        android:layout_marginStart="119dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="212dp"
        android:layout_marginBottom="445dp"
        android:onClick="numberClick"
        android:text="@string/sign"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textViewOutput"
        android:layout_width="340dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/digitalnumbers_regular"
        android:text="@string/zero"
        android:textColor="@color/textColor"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/buttonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="button0,button1,button2,button3,button4,button5,button6,button7,button8,button9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>